--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
@@ -8,5 +8,7 @@ html(lang="en")
     title Andrew Jensen-Battaglia
     
   body
-    h1 My dev portfolio!
-    include test.jade
+    include helpers/mixins.jade
+    include header/header.jade
+    include main/main.jade
+    include footer/footer.jade
