include fonts, establish global font rules

--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -97,10 +97,18 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+    font-family: $main-body-text;
+}
 
-
-
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $main-header-text;    
+}
 
 
 
