--- a/src/scss/layouts/_grid.scss
+++ b/src/scss/layouts/_grid.scss
@@ -1,6 +1,6 @@
 body {
   display: grid;
-  grid-template-rows: 55px auto auto;
+  grid-template-rows: auto auto auto;
   grid-template-areas:  "page-header"
                         "home-main-body"
                         "page-footer";
@@ -13,7 +13,7 @@ body {
 .home-main-body {
   grid-area: "home-main-body";
   display: grid;
-  grid-template-rows: 250px auto auto auto auto;
+  grid-template-rows: minmax(250px, auto) auto auto auto auto;
   grid-template-areas:  "home-banner"
                         "home-projects"
                         "home-skills"
