--- a/src/jade/header/header.jade
+++ b/src/jade/header/header.jade
@@ -1,6 +1,9 @@
 header.page-header
-  a.logo(href="#") AJ
+  .header-logo
+    a.header-logo__text(href="#") AJ
   .mobile-nav-toggle
-    span.mobile-nav-toggle__line
+    .mobile-nav-toggle__line
+    .mobile-nav-toggle__line
+    .mobile-nav-toggle__line
   
   include _nav.jade
