--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin nav-toggle-line {
-  display: block;
-  width: 1.5em;
+  width: em(24);
   height: 2px;
-  border-radius: 2px;
+  margin: em(7) 0 0;
   background-color: #fff;
+  border-radius: em(2);
 }
