Rename fonts and global var

--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -106,7 +106,7 @@ html {
 }
 
 body {
-    font-family: $main-body-text;
+    font-family: $Montserrat;
 }
 
 h1,
@@ -115,7 +115,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: $main-header-text;    
+    font-family: $Josefin-Sans; 
 }
 
 ul {
