--- a/src/scss/helpers/_functions.scss
+++ b/src/scss/helpers/_functions.scss
@@ -1,3 +1,3 @@
-@function em($pixels, $context: $global-font-size) {
+@function em($pixels, $context: $browser-context) {
   @return #{$pixels / $context}em;
 }
