--- a/src/scss/vars/_typography.scss
+++ b/src/scss/vars/_typography.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Montserrat:500');
 
-$main-body-text: 'Montserrat', sans-serif;
-$main-header-text: 'Josefin Sans', sans-serif;
+$Montserrat: 'Montserrat', sans-serif;
+$Josefin-Sans: 'Josefin Sans', sans-serif;
 
-$global-font-size: 16;
+$browser-context: 16;
