Add class names to header nav mixin

--- a/src/jade/header/_nav.jade
+++ b/src/jade/header/_nav.jade
@@ -1,5 +1,11 @@
 nav.page-header-nav
-  +header-nav-links('page-header-nav__links')
+  +header-nav-links(
+    'page-header-nav__list',
+    'page-header-nav__list-item',
+    'page-header-nav__link')
 
 nav.page-header-nav-mobile
-  +header-nav-links('page-header-nav-mobile__links')
+  +header-nav-links(
+    'page-header-nav-mobile__list', 
+    'page-header-nav-mobile__list-item',
+    'page-header-nav-mobile__link')
