--- a/src/jade/helpers/mixins.jade
+++ b/src/jade/helpers/mixins.jade
@@ -1,8 +1,8 @@
-mixin header-nav-links(className)
-  ul(class=className)
-    li
-      a(href="") Projects
-    li
-      a(href="") About
-    li
-      a(href="") Contact
+mixin header-nav-links(listClass, listItemClass, linkClass)
+  ul(class=listClass)
+    li(class=listItemClass)
+      a(class=linkClass href="#") Projects
+    li(class=listItemClass)
+      a(class=linkClass href="#") About
+    li(class=listItemClass)
+      a(class=linkClass href="#") Contact
