Build banner with basic styling

--- a/src/jade/main/_banner.jade
+++ b/src/jade/main/_banner.jade
@@ -1,1 +1,6 @@
 section.home-banner
+  .home-banner__background
+    .home-banner-text
+      p.home-banner-text__greet Hi, I'm Andrew
+      p.home-banner-text__desc I love to design, create, and problem solve. For me, front-end development is the perfect marriage of all these things.
+    img.home-banner__headshot(src="", alt="Headshot of Andrew")
