Markup and styling for section headings

--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -1,1 +1,4 @@
 section.home-projects
+  .section-heading
+    h1.section-heading__text Projects
+    .section-heading__line.section-heading__line--right
