--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,5 +15,7 @@
 @import 'layouts/body';
 @import 'layouts/footer';
 
+@import 'modules/headings/section-heading';
 @import 'modules/header/header';
 @import 'modules/home-banner/home-banner';
+@import 'modules/home-projects/home-projects';
