Add color gradient to home banner, make section heading h2

--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -1,4 +1,5 @@
 $nile-blue: #173753;
-$porsche: rgba(234, 179, 90, 0.9);
+$marzipan: #F7DD9C;
+$porsche: #ECBB6B;
 $mine-shaft: #363636;
 $boulder: #7D7D7D;
