Build and style projects section

--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -1,4 +1,35 @@
-section.home-projects
+section.home-projects-section
   .section-heading
     h2.section-heading__text Projects
     .section-heading__line.section-heading__line--right
+
+  .home-projects-section__wrapper
+    +home-project(
+      "#",
+      "Docs Portal",
+      "A documentation portal that allows ease of access to content.",
+      "img/betterreads.png")
+      
+    +home-project(
+      "#",
+      "SASB Navigator",
+      "A high-performance navigator to help companies find the right sustainability information.",
+      "img/betterreads.png")
+
+    +home-project(
+      "#",
+      "Better Reads",
+      "A prototype SPA powered by React.js that leverages Google Books to seamlessly allow book searching and list creation.",
+      "img/betterreads.png")
+
+    +home-project(
+      "#",
+      "CommuteCast",
+      "A Google Map canvas that plots weather forecasts along any inputted route, utilizing several Maps APIs and Forecast.io.",
+      "img/betterreads.png")
+
+    +home-project(
+      "#",
+      "Village Gate",
+      "The homepage of a concept site for an urban mall in Rochester, NY.",
+      "img/betterreads.png")
