--- a/src/scss/modules/home-banner/_home-banner-text.scss
+++ b/src/scss/modules/home-banner/_home-banner-text.scss
@@ -16,6 +16,6 @@
   margin: em(8) 0 0;
   font-family: $Montserrat;
   font-size: em(13);
-  letter-spacing: 0.1px;
+  letter-spacing: em(0.3);
   color: #5D5D5D;
 }
