--- a/src/scss/vars/_colors.scss
+++ b/src/scss/vars/_colors.scss
@@ -2,4 +2,5 @@ $nile-blue: #173753;
 $marzipan: #F7DD9C;
 $porsche: #ECBB6B;
 $mine-shaft: #363636;
-$boulder: #7D7D7D;
+$dove-grey: #686868;
+$boulder: #7B7B7B;
