--- a/src/jade/helpers/mixins.jade
+++ b/src/jade/helpers/mixins.jade
@@ -6,3 +6,10 @@ mixin header-nav-links(listClass, listItemClass, linkClass)
       a(class=linkClass href="#") About
     li(class=listItemClass)
       a(class=linkClass href="#") Contact
+
+mixin home-project(linkHref, title, desc, imgSrc)
+  .home-project
+    a.home-project__anchor(href=linkHref)
+      h3.home-project__name #{title}
+      p.home-project__desc #{desc}
+      img.home-project__image(src=imgSrc, alt="#{title} screenshot")
