tweak project section naming

--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -1,9 +1,9 @@
-section.home-projects-section
+section.home-projects
   .section-heading
     h2.section-heading__text Projects
     .section-heading__line.section-heading__line--right
 
-  .home-projects-section__wrapper
+  .home-projects__wrapper
     +home-project(
       "#",
       "Docs Portal",
