Add images and styling tweaks to project section

--- a/src/jade/helpers/mixins.jade
+++ b/src/jade/helpers/mixins.jade
@@ -7,9 +7,9 @@ mixin header-nav-links(listClass, listItemClass, linkClass)
     li(class=listItemClass)
       a(class=linkClass href="#") Contact
 
-mixin home-project(linkHref, title, desc, imgSrc)
+mixin home-project(linkHref, title, desc, imgSrc, srcSet)
   .home-project
     a.home-project__anchor(href=linkHref)
       h3.home-project__name #{title}
       p.home-project__desc #{desc}
-      img.home-project__image(src=imgSrc, alt="#{title} screenshot")
+      img.home-project__image(src=imgSrc, srcset=srcSet, title="#{title} screenshot")
