--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -8,28 +8,33 @@ section.home-projects
       "#",
       "Docs Portal",
       "A documentation portal that allows ease of access to content.",
-      "img/betterreads.png")
+      "img/Docs_Portal_1x.jpg",
+      "img/Docs_Portal_2x.jpg 2x, img/Docs_Portal_1x.jpg 1x")
       
     +home-project(
       "#",
       "SASB Navigator",
       "A high-performance navigator to help companies find the right sustainability information.",
-      "img/betterreads.png")
+      "img/SASB_SN_1x.jpg",
+      "img/SASB_SN_2x.jpg 2x, img/SASB_SN_1x.jpg 1x")
 
     +home-project(
       "#",
       "Better Reads",
       "A prototype SPA powered by React.js that leverages Google Books to seamlessly allow book searching and list creation.",
-      "img/betterreads.png")
+      "img/Better_Reads_1x.png",
+      "img/Better_Reads_2x.png 2x, img/Better_Reads_1x.png 1x")
 
     +home-project(
       "#",
       "CommuteCast",
       "A Google Map canvas that plots weather forecasts along any inputted route, utilizing several Maps APIs and Forecast.io.",
-      "img/betterreads.png")
+      "img/Commute_Cast_1x.jpg",
+      "img/Commute_Cast_2x.jpg 2x, img/Commute_Cast_1x.jpg 1x")
 
-    +home-project(
-      "#",
-      "Village Gate",
-      "The homepage of a concept site for an urban mall in Rochester, NY.",
-      "img/betterreads.png")
+    .home-project
+      a.home-project__anchor(href=linkHref)
+        h3.home-project__name Village Gate
+        p.home-project__desc The homepage of a concept site for an urban mall in Rochester, NY.
+        .home-project__vg-image
+          p.home-project__vg-image-text Village Gate Square
