--- a/src/scss/vars/_typography.scss
+++ b/src/scss/vars/_typography.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Montserrat:500');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Montserrat:500|Pacifico');
 
 $Montserrat: 'Montserrat', sans-serif;
 $Josefin-Sans: 'Josefin Sans', sans-serif;
+$Pacifico: 'Pacifico', cursive;
 
 $browser-context: 16;
