--- a/src/scss/modules/home-projects/_home-project.scss
+++ b/src/scss/modules/home-projects/_home-project.scss
@@ -1,5 +1,6 @@
 .home-project {
   margin: em(40) 0;
+  max-width: em(500);
 
   &__name {
     @include home-heading(em(20));
@@ -14,7 +15,21 @@
   }
 
   &__image {
-    width: 100%;
-    background-color: #cecece;
+    max-width: 100%;
+    border: 1px solid $alto;
+  }
+  
+  &__vg-image {
+    max-width: 500px;
+    background-color: $mine-shaft;
+    color: #fff;
+  }
+
+  &__vg-image-text {
+    margin: 0;
+    padding: 25.5% 0;
+    text-align: center;
+    font-family: $Pacifico;
+    font-size: 29px;
   }
 }
