Build Skills section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,3 +20,5 @@
 @import 'modules/home-banner/home-banner';
 @import 'modules/home-projects/home-projects';
 @import 'modules/home-skills/home-skills';
+@import 'modules/home-tools/home-tools';
+@import 'modules/home-icon/home-icon';
