--- a/src/jade/main/_skills.jade
+++ b/src/jade/main/_skills.jade
@@ -1,1 +1,27 @@
 section.home-skills
+  .section-heading.section-heading--center
+    h2.section-heading__text Skills
+    .section-heading__line.section-heading__line--center
+
+  .home-skill-group-mobile
+    img(class="home-icon home-icon__js" src="img/js.png", title="JavaScript" alt="JavaScript Icon")
+    include ../../svg/skill-lines/mobile-js-lines.svg
+    .home-skill-group-mobile__icons
+      img(class="home-icon home-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
+      include ../../svg/skill-icons/react.svg
+      include ../../svg/skill-icons/es6.svg
+      img(class="home-icon home-icon__node" src="img/node_js_1x.png", srcset="img/node_js_1x.png 1x, img/node_js_2x.png 2x", title="Node JS" alt="Node JS Icon")
+      include ../../svg/skill-icons/jquery.svg
+
+  .home-skill-group-mobile
+    include ../../svg/skill-icons/css3.svg
+    include ../../svg/skill-lines/mobile-css-lines.svg
+    .home-skill-group-mobile__icons
+      include ../../svg/skill-icons/sass.svg
+      include ../../svg/skill-icons/bem.svg
+
+  .home-skill-group-mobile
+    include ../../svg/skill-icons/html5.svg
+    include ../../svg/skill-lines/mobile-html-line.svg
+    .home-skill-group-mobile__icons
+      include ../../svg/skill-icons/pug.svg
