--- a/src/scss/modules/headings/_section-heading.scss
+++ b/src/scss/modules/headings/_section-heading.scss
@@ -1,5 +1,9 @@
 .section-heading {
 
+  &--center {
+    text-align: center;
+  }
+
   &__text {
     @include home-heading(em(28));
     color: $boulder;
@@ -12,6 +16,11 @@
 
     &--right {
       margin-left: em(16);
+    }
+
+    &--center {
+      width: em(40);
+      margin: 0 auto;
     }
   }
 
