--- a/src/jade/main/_tools.jade
+++ b/src/jade/main/_tools.jade
@@ -1,1 +1,11 @@
 section.home-tools
+  .section-heading.section-heading--center
+    h2.section-heading__text Tools
+    .section-heading__line.section-heading__line--center
+
+  .home-tools__icons
+    img(class="home-icon home-icon__tool home-icon__git" src="img/git_1x.png", srcset="img/git_1x.png 1x, img/git_2x.png 2x,", title="Git", alt="Git Icon")
+    img(class="home-icon home-icon__tool home-icon__vs-code" src="img/vs_code_1x.png", srcset="img/vs_code_1x.png 1x, img/vs_code_2x.png 2x,", title="VS Code", alt="Visual Studio Code Icon")
+    include ../../svg/tool-icons/npm.svg
+    include ../../svg/tool-icons/sketch.svg
+    include ../../svg/tool-icons/gulp.svg
