Build Contact section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,3 +22,4 @@
 @import 'modules/home-skills/home-skills';
 @import 'modules/home-tools/home-tools';
 @import 'modules/home-icon/home-icon';
+@import 'modules/home-contact/home-contact';
