--- a/src/jade/footer/footer.jade
+++ b/src/jade/footer/footer.jade
@@ -1,1 +1,5 @@
 footer.page-footer
+  p.page-footer__text Copyright © 2018 Andrew Jensen-Battaglia • Front-End Developer
+  .page-footer__icons
+    include ../../svg/footer-icons/github.svg
+    include ../../svg/footer-icons/linkedin.svg
