--- a/src/scss/modules/header/_mobile-nav-toggle.scss
+++ b/src/scss/modules/header/_mobile-nav-toggle.scss
@@ -1,11 +1,15 @@
 .mobile-nav-toggle {
   align-self: center;
   cursor: pointer;
-}
 
-.mobile-nav-toggle__line {
-  @include nav-toggle-line;
-  &:nth-of-type(1) {
-    margin: 0;
+  &__line {
+    @include nav-toggle-line;
+    &:nth-of-type(1) {
+      margin: 0;
+    }
+  }
+
+  @include desktop {
+    display: none;
   }
 }
