--- a/src/scss/modules/header/_page-header-nav.scss
+++ b/src/scss/modules/header/_page-header-nav.scss
@@ -1,3 +1,21 @@
 .page-header-nav {
   display: none;
+
+  @include desktop {
+    display: block;
+    z-index: 1;
+    color: #fff;
+    font-size: em(16);
+    font-family: $Josefin-Sans;
+
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: em(350);
+      height: 100%;
+      margin: 0;
+      padding: 0 em(70) 0 0;
+    }
+  }
 }
