--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -34,7 +34,8 @@ section.home-projects
 
     .home-project
       a.home-project__anchor(href=linkHref)
-        h3.home-project__name Village Gate
-        p.home-project__desc The homepage of a concept site for an urban mall in Rochester, NY.
+        .home-project__text
+          h3.home-project__name Village Gate
+          p.home-project__desc The homepage of a concept site for an urban mall in Rochester, NY.
         .home-project__vg-image
           p.home-project__vg-image-text Village Gate Square
