Reorganize icon class names into groups

--- a/src/jade/main/_skills.jade
+++ b/src/jade/main/_skills.jade
@@ -4,13 +4,13 @@ section.home-skills
     .section-heading__line.section-heading__line--center
 
   .home-skill-group-mobile
-    img(class="home-icon home-icon__js" src="img/js.png", title="JavaScript" alt="JavaScript Icon")
+    img(class="home-skill-icon home-skill-icon__js" src="img/js.png", title="JavaScript" alt="JavaScript Icon")
     include ../../svg/skill-lines/mobile-js-lines.svg
     .home-skill-group-mobile__icons
-      img(class="home-icon home-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
+      img(class="home-skill-icon home-skill-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
       include ../../svg/skill-icons/react.svg
       include ../../svg/skill-icons/es6.svg
-      img(class="home-icon home-icon__node" src="img/node_js_1x.png", srcset="img/node_js_1x.png 1x, img/node_js_2x.png 2x", title="Node JS" alt="Node JS Icon")
+      img(class="home-skill-icon home-skill-icon__node" src="img/node_js_1x.png", srcset="img/node_js_1x.png 1x, img/node_js_2x.png 2x", title="Node JS" alt="Node JS Icon")
       include ../../svg/skill-icons/jquery.svg
 
   .home-skill-group-mobile
@@ -25,3 +25,17 @@ section.home-skills
     include ../../svg/skill-lines/mobile-html-line.svg
     .home-skill-group-mobile__icons
       include ../../svg/skill-icons/pug.svg
+
+  .home-skill-group-desktop
+    include ../../svg/skill-lines/skill_lines.svg
+    img(class="home-skill-icon home-skill-icon__js" src="img/js.png", title="JavaScript" alt="JavaScript Icon")
+    img(class="home-skill-icon home-skill-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
+    include ../../svg/skill-icons/react.svg
+    include ../../svg/skill-icons/es6.svg
+    img(class="home-skill-icon home-skill-icon__node" src="img/node_js_1x.png", srcset="img/node_js_1x.png 1x, img/node_js_2x.png 2x", title="Node JS" alt="Node JS Icon")
+    include ../../svg/skill-icons/jquery.svg
+    include ../../svg/skill-icons/css3.svg
+    include ../../svg/skill-icons/sass.svg
+    include ../../svg/skill-icons/bem.svg
+    include ../../svg/skill-icons/html5.svg
+    include ../../svg/skill-icons/pug.svg
