--- a/src/jade/main/_contact.jade
+++ b/src/jade/main/_contact.jade
@@ -3,5 +3,5 @@ section.home-contact
   p.home-contact__info I am currently available for hire.
   p.home-contact__info If you’re on the lookout for a driven, best practices-following, detail-oriented front-end developer, look no further!
   button.home-contact__message-btn 
-    include ../../svg/mail-icn.svg
+    include ../../svg/contact-icons/mail-icn.svg
     span.home-contact__message-btn-text MESSAGE ME
