--- a/src/scss/modules/home-tools/home-tools.scss
+++ b/src/scss/modules/home-tools/home-tools.scss
@@ -8,11 +8,21 @@
     align-items: center;
     width: em(258);
     margin: em(15) auto;
+  }
 
-    @include tablet {
+  @include tablet {
+    &__icons {
       flex-wrap: nowrap;
       width: em(450);
       margin-top: em(38);
+    }
+  }
+
+  @include desktop {
+    padding: em(40) em(38);
+
+    &__icons {
+      margin: 2.5em auto 1.2em;
     }
   }
 
