--- a/src/scss/modules/home-tools/home-tools.scss
+++ b/src/scss/modules/home-tools/home-tools.scss
@@ -26,4 +26,13 @@
     }
   }
 
+  @include desktop-wide {
+    font-size: 24px;
+    padding-top: 3.3em;
+
+    &__icons {
+      font-size: 22px;
+    }
+  }
+
 }
