--- a/src/scss/modules/home-projects/home-projects.scss
+++ b/src/scss/modules/home-projects/home-projects.scss
@@ -14,6 +14,7 @@
   @include desktop {
     max-width: 1206px;
     margin: 0 auto;
+    padding-bottom: 4em;
 
     &__wrapper {
       font-size: 18px;
