Apply extra padding to header icons for an appropriate mobile tap area

--- a/src/jade/header/header.jade
+++ b/src/jade/header/header.jade
@@ -1,6 +1,7 @@
 header.page-header
   .header-logo
-    a.header-logo__text(href="#") AJ
+    .header-logo__inner
+      a.header-logo__text(href="#") AJ
   .mobile-nav-toggle
     .mobile-nav-toggle__line
     .mobile-nav-toggle__line
