--- a/src/scss/modules/header/_header-logo.scss
+++ b/src/scss/modules/header/_header-logo.scss
@@ -1,16 +1,20 @@
 .header-logo {
-  width: 3.1em;
-  height: 2.25em;
-  border: 3px solid #fff;
-  text-align: center;
-  cursor: pointer;
-}
+  padding: em(6) 0;
+  
+  &__inner {
+    width: 3.1em;
+    height: 2.25em;
+    border: 3px solid #fff;
+    text-align: center;
+    cursor: pointer;
+  }
 
-.header-logo__text {
-  color: #fff;
-  font-size: 1.6em;
-  text-decoration: none;
-  letter-spacing: 3px;
-  line-height: 1.25em;
-  margin-left: 0.12em;
+  &__text {
+    color: #fff;
+    font-size: 1.6em;
+    text-decoration: none;
+    letter-spacing: 3px;
+    line-height: 1.25em;
+    margin-left: 0.12em;
+  }
 }
