--- a/src/scss/modules/header/_mobile-nav-toggle.scss
+++ b/src/scss/modules/header/_mobile-nav-toggle.scss
@@ -1,6 +1,6 @@
 .mobile-nav-toggle {
   align-self: center;
-  cursor: pointer;
+  padding: em(14) em(12);
 
   &__line {
     @include nav-toggle-line;
