Make footer icons anchors and apply extra padding for a better tap area

--- a/src/jade/footer/footer.jade
+++ b/src/jade/footer/footer.jade
@@ -1,5 +1,7 @@
 footer.page-footer
   p.page-footer__text Copyright © 2018 Andrew Jensen-Battaglia • Front-End Developer
   .page-footer__icons
-    include ../../svg/contact-icons/github.svg
-    include ../../svg/contact-icons/linkedin.svg
+    a(class="page-footer__icon", href="#")
+      include ../../svg/contact-icons/github.svg
+    a(class="page-footer__icon", href="#")
+      include ../../svg/contact-icons/linkedin.svg
