--- a/src/scss/modules/home-icon/home-icon.scss
+++ b/src/scss/modules/home-icon/home-icon.scss
@@ -172,8 +172,12 @@
 }
   
 .home-contact-icon {
-  margin: 0 em(13);
   cursor: pointer;
+  margin: 0;
+  
+  &__mail {
+    margin: 0 em(13);
+  }
 
   &__github {
     fill: #D9D9D9;
