Add About modal for mobile view

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,3 +12,6 @@ html(lang="en")
     include header/header.jade
     include main/main.jade
     include footer/footer.jade
+    include modules/_overlay.jade
+    include modules/_about-modal.jade
+
