--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,3 +23,5 @@
 @import 'modules/home-tools/home-tools';
 @import 'modules/home-icon/home-icon';
 @import 'modules/home-contact/home-contact';
+@import 'modules/home-about-modal/home-about-modal';
+@import 'modules/overlay/page-overlay';
