--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -12,7 +12,7 @@
 
   &__icon {
     display: inline-block;
-    margin: 0 em(8);
+    margin: 0 em(16);
     padding: em(10);
   }
 
@@ -24,6 +24,10 @@
 
     &__text {
       margin: 0;
+    }
+
+    &__icon {
+      padding: 0;
     }
   }
 }
