About modal for desktop views

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'vars/breakpoints';
 @import 'vars/colors';
 @import 'vars/typography';
+@import 'vars/elem-dimensions';
 
 @import 'base/normalize';
 @import 'base/defaults';
