--- a/src/scss/modules/home-about-modal/home-about-modal.scss
+++ b/src/scss/modules/home-about-modal/home-about-modal.scss
@@ -3,18 +3,25 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: em(310);
-  padding: em(20) em(20) em(12);
+  width: 86%;
+  min-width: 310px;
+  max-width: 390px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.5);
   z-index: 60;
+  opacity: 0;
+  pointer-events: none;
+  // ON SHOW
+  // pointer-events: auto;
+  // opacity: 1;
 
   &__close {
     position: absolute;
-    padding: em(13) em(16);
+    padding: calc((48px - #{$close-icon-width}) / 2);
     top: em(6);
     right: em(6);
+    line-height: 0;
   }
 
   &__image {
@@ -22,13 +29,41 @@
   }
 
   @include tablet {
-    // width: 39.3em;
-    // height: 29.35em;
+    max-width: 430px;
+  }
+
+  @include tablet-wide {
+    display: flex;
+    max-width: 39.3em;
+    width: 730px;
+
+    &__image {
+      display: block;
+      width: 50%;
+      border-radius: 0 8px 8px 0;
+    }
+
+    &__close {
+      top: 0.2em;
+      right: 0.3em;
+    }
   }
 
   @include desktop {
-    width: 39.3em;
+    width: 41.5em;
     height: 29.35em;
+    max-width: none;
+    &:hover {
+      .home-about-modal__close {
+        opacity: 1;
+      }
+    }
+
+    &__close {
+      opacity: 0.3;
+      cursor: pointer;
+      transition: opacity 200ms ease-in-out;
+    }
   }
 }
 
