--- a/src/scss/modules/home-icon/home-icon.scss
+++ b/src/scss/modules/home-icon/home-icon.scss
@@ -191,3 +191,19 @@
     margin: 0;
   }
 }
+
+.home-icon {
+  &__close {
+    width: $close-icon-width
+  }
+  
+  &__close-line {
+    stroke: $dove-grey;
+  }
+
+  @include tablet-wide {
+    &__close-line {
+      stroke: #fff;
+    }
+  }
+}
