--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -33,7 +33,7 @@ section.home-projects
       "img/Commute_Cast_2x.jpg 2x, img/Commute_Cast_1x.jpg 1x")
 
     .home-project
-      a.home-project__anchor(href=linkHref)
+      a.home-project__anchor(href="#")
         .home-project__text
           h3.home-project__name Village Gate
           p.home-project__desc The homepage of a concept site for an urban mall in Rochester, NY.
