Make a mixin for a generic modal

--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -46,3 +46,18 @@
   font-weight: 400;
   color: $boulder;
 }
+
+@mixin modal($color) {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 86%;
+  min-width: 310px;
+  max-width: 390px;
+  background-color: $color;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.5);
+  z-index: 60;
+  opacity: 0;
+  pointer-events: none;
+}
