Create basic contact form

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -14,4 +14,5 @@ html(lang="en")
     include footer/footer.jade
     include modules/_overlay.jade
     include modules/_about-modal.jade
+    include modules/_contact-modal.jade
 
