--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,4 +25,6 @@
 @import 'modules/home-icon/home-icon';
 @import 'modules/home-contact/home-contact';
 @import 'modules/home-about-modal/home-about-modal';
+@import 'modules/contact-modal/contact-modal';
+@import 'modules/contact-form/contact-form';
 @import 'modules/overlay/page-overlay';
