--- a/src/jade/modules/_contact-modal.jade
+++ b/src/jade/modules/_contact-modal.jade
@@ -4,22 +4,8 @@
   //-   include ../../svg/misc-icons/close_icn.svg
 
   h1.contact-modal__heading Send me an email
+  
+  #wufoo-z5x3q751el9hbf
+    a(href="https://ajbatt.wufoo.com/forms/z5x3q751el9hbf")
 
-  form(action="#", method="post" class="contact-form")
-    .contact-form__input-wrap  
-      label(for="contact-name") NAME
-      input(id="contact-name", type="text", name="user-name" class="contact-form__input-text")
-
-    .contact-form__input-wrap
-      label(for="contact-email") EMAIL
-      input(id="contact-email", type="email", name="user-email" class="contact-form__input-text")
-
-    .contact-form__input-wrap.contact-form__input-wrap--wide
-      label(for="contact-subject") SUBJECT
-      input(id="contact-subject", type="text", name="user-subject" class="contact-form__input-text")
-
-    .contact-form__input-wrap.contact-form__input-wrap--wide
-      label(for="contact-message") MESSAGE
-      textarea(id="contact-message", name="user-message" class="contact-form__input-textarea")
-
-    button(class="contact-modal-btn-submit") Submit
+  script(src='js/app.js', type="text/javascript")
