Use a polygon for banner bottom slant, fix headshot

--- a/src/jade/modules/_contact-modal.jade
+++ b/src/jade/modules/_contact-modal.jade
@@ -1,11 +1,6 @@
 .contact-modal
 
-  //- .home-about-modal__close
-  //-   include ../../svg/misc-icons/close_icn.svg
+  .home-about-modal__close
+    include ../../svg/misc-icons/close_icn.svg
 
   h1.contact-modal__heading Send me an email
-  
-  #wufoo-z5x3q751el9hbf
-    a(href="https://ajbatt.wufoo.com/forms/z5x3q751el9hbf")
-
-  script(src='js/app.js', type="text/javascript")
