--- a/src/scss/modules/home-skills/home-skills.scss
+++ b/src/scss/modules/home-skills/home-skills.scss
@@ -1,6 +1,7 @@
 .home-skills {
   padding: em(40) em(38);
   background-color: #F5F5F5;
+  z-index: 4;
 
   @include desktop-wide {
     font-size: 24px;
