--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -1,41 +1,42 @@
 section.home-projects
-  .section-heading
-    h2.section-heading__text Projects
-    .section-heading__line.section-heading__line--right
+  .home-projects__section-wrapper
+    .section-heading
+      h2.section-heading__text Projects
+      .section-heading__line.section-heading__line--right
 
-  .home-projects__wrapper
-    +home-project(
-      "#",
-      "Docs Portal",
-      "A documentation portal that allows ease of access to content.",
-      "img/Docs_Portal_1x.jpg",
-      "img/Docs_Portal_2x.jpg 2x, img/Docs_Portal_1x.jpg 1x")
-      
-    +home-project(
-      "#",
-      "SASB Navigator",
-      "A high-performance navigator to help companies find the right sustainability information.",
-      "img/SASB_SN_1x.jpg",
-      "img/SASB_SN_2x.jpg 2x, img/SASB_SN_1x.jpg 1x")
+    .home-projects__wrapper
+      +home-project(
+        "#",
+        "Docs Portal",
+        "A documentation portal that allows ease of access to content.",
+        "img/Docs_Portal_1x.jpg",
+        "img/Docs_Portal_2x.jpg 2x, img/Docs_Portal_1x.jpg 1x")
+        
+      +home-project(
+        "#",
+        "SASB Navigator",
+        "A high-performance navigator to help companies find the right sustainability information.",
+        "img/SASB_SN_1x.jpg",
+        "img/SASB_SN_2x.jpg 2x, img/SASB_SN_1x.jpg 1x")
 
-    +home-project(
-      "#",
-      "Better Reads",
-      "A prototype SPA powered by React.js that leverages Google Books to seamlessly allow book searching and list creation.",
-      "img/Better_Reads_1x.png",
-      "img/Better_Reads_2x.png 2x, img/Better_Reads_1x.png 1x")
+      +home-project(
+        "#",
+        "Better Reads",
+        "A prototype SPA powered by React.js that leverages Google Books to seamlessly allow book searching and list creation.",
+        "img/Better_Reads_1x.png",
+        "img/Better_Reads_2x.png 2x, img/Better_Reads_1x.png 1x")
 
-    +home-project(
-      "#",
-      "CommuteCast",
-      "A Google Map canvas that plots weather forecasts along any inputted route, utilizing several Maps APIs and Forecast.io.",
-      "img/Commute_Cast_1x.jpg",
-      "img/Commute_Cast_2x.jpg 2x, img/Commute_Cast_1x.jpg 1x")
+      +home-project(
+        "#",
+        "CommuteCast",
+        "A Google Map canvas that plots weather forecasts along any inputted route, utilizing several Maps APIs and Forecast.io.",
+        "img/Commute_Cast_1x.jpg",
+        "img/Commute_Cast_2x.jpg 2x, img/Commute_Cast_1x.jpg 1x")
 
-    .home-project
-      a.home-project__anchor(href="#")
-        .home-project__text
-          h3.home-project__name Village Gate
-          p.home-project__desc The homepage of a concept site for an urban mall in Rochester, NY.
-        .home-project__vg-image
-          p.home-project__vg-image-text Village Gate Square
+      .home-project
+        a.home-project__anchor(href="#")
+          .home-project__text
+            h3.home-project__name Village Gate
+            p.home-project__desc The homepage of a concept site for an urban mall in Rochester, NY.
+          .home-project__vg-image
+            p.home-project__vg-image-text Village Gate Square
