--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -4,7 +4,8 @@
   background-color: $mine-shaft;
   text-align: center;
   border-top: 1px solid $boulder;
-  
+  z-index: 4;
+
   &__text {
     font-size: em(12);
     margin: 0 0 em(22);
