--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -4,9 +4,10 @@
   grid-template-columns: auto auto;
   justify-content: space-between;
   align-items: center;
-  height: em(56);
+  height: em($header-height);
   padding: 0 em(8) 0 em(20);
   background-color: $nile-blue;
+  z-index: 40;
 
   @include desktop {
     font-size: 22px;
