--- a/src/scss/modules/home-banner/home-banner.scss
+++ b/src/scss/modules/home-banner/home-banner.scss
@@ -2,52 +2,52 @@
   position: relative;
   background: linear-gradient($marzipan, $porsche);
 
-  &__headshot {
-    width: em(190);
-    position: absolute;
-    left: 20%;
-    bottom: 0;
-  }
-
   @include tablet-wide {
     &:after {
-      display: block;
       position: absolute;
-      right: 0;
-      left: 0;
       bottom: -2px;
-      height: 16%;
-      content: '';
-      background-color: #fff;
-      transform: skewY(-4deg);
-      transform-origin: 100%;
-      z-index: 2;
-    }
-
-    &__headshot {
-      width: em(360);
-      left: unset;
-      right: 6%;
-      bottom: em(20);
+      width: 100%;
+      height: 10vw;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='#fff' preserveAspectRatio='none'%3E%3Cpolygon points='0, 95 100, 0 100, 100 0,100'/%3E%3C/svg%3E");
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      content: "";
+      z-index: 4;
     }
   }
-
+  
   @include desktop {
     font-size: 23px;
   }
+}
 
-  @include desktop-wide {
-    &:after {
-      height: 22%;
-    }
-
-    &__headshot {
-      width: em(440);
-      bottom: em(70);
-    }
+.home-banner__headshot {
+  width: em(190);
+  position: fixed;
+  left: 20%;
+  top: em(225);
+  
+  @include tablet-wide {
+    width: em(360);
+    left: unset;
+    right: 6%;
+    top: em(125);
   }
 
-  
+  @include desktop {
+    bottom: unset;
+    top: em(165);
+  }
+
+  @include desktop-wide {
+    position: fixed;
+    top: unset;
+    bottom: -10px;
+    width: em(440);
+    bottom: 10vw;
+    margin-bottom: -84px;
+  }
 }
 
 @import 'home-banner-text';
