--- a/src/scss/vars/_typography.scss
+++ b/src/scss/vars/_typography.scss
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Montserrat:400,500|Pacifico');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Montserrat:400,500');
 
 $Montserrat: 'Montserrat', sans-serif;
 $Josefin-Sans: 'Josefin Sans', sans-serif;
-$Pacifico: 'Pacifico', cursive;
 
 $browser-context: 16;
